   * Added support for desktop notifications using KDE's
     org.kde.VisualNotifications DBus service
   * Changed "Toggle Full Screen" button to say "Full Screen" (bug #13909)
   * Added cost of units recruited, recalled, killed, and lost, to the statistics window (patch #1190)
   * Fixed bug #13626: Bug about no option to turn on/off save delete confimation. (patch #1192)
 * Miscellaneous and bugfixes:
   * Fixed language switch not affecting unit descriptions (bug #13827)
   * Fixed teleporting to impassable terrain (bug #13795)
   * Fixed an issue where teleporting could leave a unit halo
   * Fixed [set_variable]'s rand and random when operating on 0..0 (return 0)
   * Allow items to be removed from a listbox
   * Fixed objective dialog not recognizing markup (bug #13888)

Version 1.7.1:
 * AI:
   * Reworked AI code to allow easier creation of AI components.
   * New AI: Composite AI
   * (Optional) new AI configuration syntax.
   * Basic reimplementation of an old C++ AI as a 'candidate action'-based composite AI
   * Autodiscovery of available AI configurations from data/ai/ais.
   * (In debug mode) Autodiscovery of available AI configurations from data/ai/dev
 * Campaigns
   * Delfador's Memoirs: new portrait for Lionel.
    * The Hammer of Thursagan: new portraits for Angarthing, Ratheln.
 * Graphics
   * New portrait for Knight, Ghost.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Czech, Finnish, French,
     German, Greek, Hungarian, Icelandic, Lithuanian, Polish, Russian,
     Serbian, Turkish
 * User interface:
   * Removed the old obsolete layout algorithm in the new widgets
   * Added unit tests for the new widgets
   * Improved the layout algorithm not to show scrollbars when they make the
     situation worse
   * Add a new transient message dialog
   * Add a new multi page widget
   * Increase the lineheight in the new dialogs
   * Add a blur precommit function to the canvas